Tweak full widths, annotate Arc check

--- a/src/components/PostImage.astro
+++ b/src/components/PostImage.astro
@@ -28,7 +28,7 @@ if (!sizes || widths.length === 0) {
       break;
     case 'full':
       sizes = '(max-width: 2560px) 100vw, (min-width: 2561px) 2560px';
-      widths = [320, 480, 640, 768, 1024, 1280, 1600, 1920, 2560, 3456, 3840, 5120];
+      widths = [320, 480, 640, 780, 1024, 1280, 1366, 1600, 1920, 2560, 2732, 3456, 3840, 5120];
       break;
   }
 }
